[package]
name = "clyde"
version = "3.0.0"
edition = "2021"

[dependencies]
base64 = { version = "0.22.1", default-features = false, features = ["std"] }
ffmpeg = { version = "7.0.1", package = "ffmpeg-next", default-features = false, features = ["codec", "device", "filter", "format", "software-resampling", "software-scaling"] }
futures-util = { version = "0.3.30", default-features = false, features = ["std"] }
image = { version = "0.25.1", default-features = false, features = ["png"] }
image-compare = { version = "0.4.1", default-features = false }
#reqwest = { version = "0.12.4", default-features = false, features = ["brotli", "cookies", "deflate", "gzip", "http2", "native-tls-alpn", "stream", "zstd"] }
serde = { version = "1.0.203", default-features = false, features = ["derive", "std"] }
serde_json = { version = "1.0.117", default-features = false, features = ["std"] }
tokio = { version = "1.37.0", default-features = false, features = ["fs", "macros", "rt-multi-thread", "sync", "time"] }
tokio-stream = { version = "0.1.15", default-features = false }
tokio-util = { version = "0.7.11", default-features = false, features = ["io-util"] }
tracing = { version = "0.1.40", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["ansi", "env-filter"] }
